cluster/apps/guacamole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
