cluster/apps/guacamole/guacamole.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacamole
  
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
      app.kubernetes.io/component: guacamole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/component: guacamole
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole:1.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: plugins
              mountPath: /etc/guacamole/extensions
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: plugins
          persistentVolumeClaim:
            claimName: guacamole-plugins
