cluster/apps/guacamole/guacd.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacd

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
      app.kubernetes.io/component: guacd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/component: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:1.4.0
          imagePullPolicy: IfNotPresent
          args: ["-L", "debug"]
          ports:
            - name: guacd
              containerPort: 4822
              protocol: TCP
      nodeSelector:
        kubernetes.io/arch: amd64
