cluster/apps/guacamole/mariadb.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: guacamole
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
      app.kubernetes.io/component: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/component: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.7.1
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mariadb-data
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
