cluster/apps/guacamole/mariadb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: guacamole
spec:
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: mariadb
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
    protocol: TCP
